--- a/index.html
+++ b/index.html
@@ -73,5 +73,7 @@
   <ul id="ranking-list">
     <!-- Le classement sera mis à jour ici -->
   </ul>
+   <!-- Le script Firebase et ton script JavaScript -->
+   <script type="module" src="app.js"></script>
 </body>
 </html>
