--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <button onclick="validateSale('Mehdi')">Mehdi</button>
       <button onclick="validateSale('Guillaume')">Guillaume</button>
       <button onclick="validateSale('Oussama')">Oussama</button>
-      <button onclick="validateSale('Oussama')">Timothée</button>
+      <button onclick="validateSale('Timothée')">Timothée</button>
     </div>
 
     <h2>Classement</h2>
