--- a/index.html
+++ b/index.html
@@ -110,6 +110,12 @@
       color: lightblue; /* Mot "vente(s)" en bleu clair */
       font-weight: bold;
     }
+
+    .migrations {
+      color: lightblue; /* Style pour "/ migrations" */
+      font-weight: bold;
+      font-style: italic;
+    }
   </style>
 </head>
 <body>
