--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         const listItem = document.createElement('li');
         listItem.innerHTML = `
           <span>${person}</span>
-          <span class="sales">${sales} vente(s)</span>
+          <span class="sales">${sales} vente(s) / migration(s)</span>
         `;
         rankingList.appendChild(listItem);
       });
