--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@
       Oussama: { sales: 0, earnings: 0 }
     };
 
+    // Chargement du son
+    const buzzerSound = new Audio("son_buzzer.mp3");
+
     // Calcul des gains
     function calculateEarnings(sales) {
       if (sales >= 20) {
@@ -171,6 +174,7 @@
       if (salesData[name]) {
         salesData[name].sales++;
         salesData[name].earnings = calculateEarnings(salesData[name].sales);
+        buzzerSound.play(); // Lecture du son
         updateRanking();
       }
     }
