--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
       <button onclick="validateSale('Mehdi')">Mehdi</button>
       <button onclick="validateSale('Guillaume')">Guillaume</button>
       <button onclick="validateSale('Oussama')">Oussama</button>
+      <button onclick="validateSale('Timothee')">Timothée</button> <!-- Nouveau membre ajouté -->
     </div>
 
     <h2>Classement des Vente(s) / Migration(s)</h2>
@@ -152,7 +153,8 @@
       Charles: { sales: 0, earnings: 0 },
       Mehdi: { sales: 0, earnings: 0 },
       Guillaume: { sales: 0, earnings: 0 },
-      Oussama: { sales: 0, earnings: 0 }
+      Oussama: { sales: 0, earnings: 0 },
+      Timothee: { sales: 0, earnings: 0 } // Nouveau membre ajouté
     };
 
     // Chargement du son
