--- a/index.html
+++ b/index.html
@@ -7,112 +7,114 @@
   <style>
     /* Styles globaux */
     body {
-      background-color: #333; /* Fond gris foncé */
-      color: white; /* Texte en blanc */
-      font-family: Arial, sans-serif; /* Police moderne */
+      background-color: #333;
+      color: white;
+      font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
     }
-  
+
     header {
       text-align: center;
       padding: 20px;
       border-bottom: 2px solid white;
     }
-  
+
     button {
-      background-color: #444; /* Boutons gris foncé */
-      color: white; /* Texte des boutons en blanc */
+      background-color: #444;
+      color: white;
       border: none;
       padding: 10px 20px;
       border-radius: 5px;
       cursor: pointer;
       margin: 5px;
     }
-  
+
     button:hover {
-      background-color: #666; /* Couleur plus claire au survol */
+      background-color: #666;
     }
-  
+
+    .reset-button {
+      background-color: red; /* Bouton reset en rouge */
+      color: white;
+    }
+
+    .reset-button:hover {
+      background-color: darkred;
+    }
+
     .container {
       display: flex;
       flex-direction: column;
       align-items: center;
       padding: 20px;
     }
-  
+
     ul {
-      list-style-type: none; /* Enlever les puces */
+      list-style-type: none;
       padding: 0;
       width: 100%;
       max-width: 500px;
     }
-  
+
     li {
       padding: 10px 0;
       display: flex;
       justify-content: space-between;
     }
-  
-    .sale-animation {
-      color: rgb(127, 47, 255); /* Animation "+1" en vert clair */
-      font-weight: bold;
-      position: absolute;
-      animation: fadeOut 1s ease-in-out;
-    }
-  
-    @keyframes fadeOut {
-      0% {
-        opacity: 1;
-        transform: translateY(0);
-      }
-      100% {
-        opacity: 0;
-        transform: translateY(-20px);
-      }
-    }
-  
+
     footer {
       text-align: center;
       margin-top: 20px;
       border-top: 2px solid white;
       padding: 10px;
     }
-  
+
     .column {
-      flex: 1; /* Faire en sorte que chaque colonne occupe la même largeur */
+      flex: 1;
       text-align: center;
     }
-  
-    li {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+
+    /* Style pour le pop-up */
+    .popup {
+      position: fixed;
+      top: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: rgba(0, 255, 0, 0.8);
+      color: white;
+      padding: 15px 20px;
+      border-radius: 10px;
+      font-weight: bold;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+      opacity: 1;
+      transition: opacity 0.5s ease-in-out;
+      z-index: 1000;
     }
-  
-    .no-border {
-      border-bottom: none; /* Enlever la bordure entre les éléments */
+
+    .popup.fade-out {
+      opacity: 0;
     }
-  
-    /* Style pour les gains en or */
+
     .gain {
-      color: gold; /* Gains en couleur or */
+      color: gold;
       font-weight: bold;
     }
-  
-    /* Style pour les ventes en bleu clair */
+
     .sales {
-      color: lightblue; /* Nombre de ventes en bleu clair */
+      color: lightblue;
       font-weight: bold;
     }
-  
+
     .sales-word {
-      color: lightblue; /* Mot "vente(s)" en bleu clair */
+      color: lightblue;
       font-weight: bold;
     }
+
   </style>
 </head>
 <body>
+
   <header>
     <h1>Les Ventes de QQ</h1>
     <p>Suivez les ventes / migration(s) de votre équipe en temps réel !</p>
@@ -128,16 +130,14 @@
       <button onclick="validateSale('Mehdi')">Mehdi</button>
       <button onclick="validateSale('Guillaume')">Guillaume</button>
       <button onclick="validateSale('Oussama')">Oussama</button>
-      <button onclick="validateSale('Timothee')">Timothée</button> <!-- Nouveau membre ajouté -->
+      <button onclick="validateSale('Timothee')">Timothée</button>
     </div>
 
     <h2>Classement des Vente(s) / Migration(s)</h2>
-    <ul id="ranking-list">
-      <!-- Le classement sera ajouté ici dynamiquement -->
-    </ul>
+    <ul id="ranking-list"></ul>
 
     <h2>Options</h2>
-    <button onclick="resetSales()">Réinitialiser les ventes / migration(s)</button>
+    <button class="reset-button" onclick="resetSales()">Réinitialiser les ventes / migration(s)</button>
   </div>
 
   <footer>
@@ -145,7 +145,6 @@
   </footer>
 
   <script>
-    // Charger les données des ventes depuis localStorage (si elles existent)
     let salesData = JSON.parse(localStorage.getItem('salesData')) || {
         "Julien": 0,
         "Thomas": 0,
@@ -157,29 +156,20 @@
         "Timothée": 0
     };
 
-    // Fonction pour valider une vente et mettre à jour le classement
     function validateSale(member) {
-        // Augmenter le compteur de ventes localement
         salesData[member]++;
-        
-        // Sauvegarder les données dans localStorage
         localStorage.setItem('salesData', JSON.stringify(salesData));
-
-        // Afficher l'animation et jouer le son
-        showSaleAnimation(member);
-        playSound();
-
-        // Trier et afficher le classement
-        let sortedSales = Object.entries(salesData).sort((a, b) => b[1] - a[1]);
-        updateRanking(sortedSales);
+        showPopup("✅ Vente ajoutée pour " + member + " !");
+        updateRanking();
     }
 
-    // Fonction pour mettre à jour le classement
-    function updateRanking(sortedSales) {
+    function updateRanking() {
         const rankingList = document.getElementById("ranking-list");
         rankingList.innerHTML = "";
+        let sortedSales = Object.entries(salesData).sort((a, b) => b[1] - a[1]);
+
         sortedSales.forEach(([member, sales]) => {
-            const gain = calculateGain(sales);  // Calculer le gain en fonction des ventes
+            const gain = calculateGain(sales);
             const listItem = document.createElement("li");
             listItem.innerHTML = `<div class="column">${member}</div>
                                   <div class="column"><span class="sales">${sales}</span> <span class="sales-word">vente(s)</span></div>
@@ -188,61 +178,36 @@
         });
     }
 
-    // Fonction pour calculer le gain en fonction du nombre de ventes
     function calculateGain(sales) {
-        if (sales >= 20) {
-            return sales * 5;  // 5€ par vente à partir de 20 ventes
-        } else if (sales >= 10) {
-            return sales * 4;  // 4€ par vente entre 10 et 19 ventes
-        } else {
-            return sales * 3;  // 3€ par vente entre 1 et 9 ventes
-        }
+        if (sales >= 20) return sales * 5;
+        if (sales >= 10) return sales * 4;
+        return sales * 3;
     }
 
-    // Fonction pour réinitialiser les ventes
     function resetSales() {
-        // Afficher une fenêtre de confirmation avant de réinitialiser
-        if (confirm('Êtes-vous sûr de vouloir réinitialiser toutes les ventes ? Cela réinitialisera toutes les données.')) {
-            // Réinitialiser les données
+        if (confirm('Êtes-vous sûr de vouloir réinitialiser toutes les ventes ?')) {
             for (let member in salesData) {
                 salesData[member] = 0;
             }
-
-            // Sauvegarder les données réinitialisées dans localStorage
             localStorage.setItem('salesData', JSON.stringify(salesData));
-
-            // Mettre à jour l'affichage du classement
-            updateRanking(Object.entries(salesData).sort((a, b) => b[1] - a[1]));
+            updateRanking();
         }
     }
 
-    // Fonction pour afficher l'animation "+1"
-    function showSaleAnimation(member) {
-        const saleAnimation = document.createElement("div");
-        saleAnimation.classList.add("sale-animation");
-        saleAnimation.textContent = "+1";
-        saleAnimation.style.color = "red";  // Mettre en rouge
-        saleAnimation.style.fontSize = "50px";  // Augmenter la taille
-
-        const button = document.querySelector(`button[onclick="validateSale('${member}')"]`);
-        button.appendChild(saleAnimation);
+    function showPopup(message) {
+        const popup = document.createElement("div");
+        popup.classList.add("popup");
+        popup.textContent = message;
+        document.body.appendChild(popup);
 
         setTimeout(() => {
-            saleAnimation.remove();
-        }, 1000);
+            popup.classList.add("fade-out");
+            setTimeout(() => popup.remove(), 500);
+        }, 2000);
     }
 
-    // Fonction pour jouer le son
-    function playSound() {
-        const audio = new Audio('son_buzzer.mp3');  // Assurez-vous que le fichier son est dans le même répertoire
-        audio.play();
-    }
-
-    // Initialiser le classement dès le chargement de la page
-    window.onload = function() {
-        let sortedSales = Object.entries(salesData).sort((a, b) => b[1] - a[1]);
-        updateRanking(sortedSales);
-    };
+    window.onload = updateRanking;
   </script>
+
 </body>
 </html>
