--- a/index.html
+++ b/index.html
@@ -7,73 +7,108 @@
   <style>
     /* Styles globaux */
     body {
-      background-color: #333;
-      color: white;
-      font-family: Arial, sans-serif;
+      background-color: #333; /* Fond gris foncé */
+      color: white; /* Texte en blanc */
+      font-family: Arial, sans-serif; /* Police moderne */
       margin: 0;
       padding: 0;
     }
-
+  
     header {
       text-align: center;
       padding: 20px;
       border-bottom: 2px solid white;
     }
-
+  
     button {
-      background-color: #444;
-      color: white;
+      background-color: #444; /* Boutons gris foncé */
+      color: white; /* Texte des boutons en blanc */
       border: none;
       padding: 10px 20px;
       border-radius: 5px;
       cursor: pointer;
       margin: 5px;
     }
-
+  
     button:hover {
-      background-color: #666;
+      background-color: #666; /* Couleur plus claire au survol */
     }
-
+  
     .container {
       display: flex;
       flex-direction: column;
       align-items: center;
       padding: 20px;
     }
-
+  
     ul {
-      list-style-type: none;
+      list-style-type: none; /* Enlever les puces */
       padding: 0;
       width: 100%;
       max-width: 500px;
     }
-
+  
     li {
       padding: 10px 0;
       display: flex;
       justify-content: space-between;
     }
-
-    /* Style pour le pop-up */
-    .popup {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      background-color: green;
-      color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 24px;
+  
+    .sale-animation {
+      color: rgb(127, 47, 255); /* Animation "+1" en vert clair */
       font-weight: bold;
-      z-index: 1000;
+      position: absolute;
+      animation: fadeOut 1s ease-in-out;
     }
-
-    /* Style pour le bouton reset */
-    .reset-btn {
-      background-color: red;
+  
+    @keyframes fadeOut {
+      0% {
+        opacity: 1;
+        transform: translateY(0);
+      }
+      100% {
+        opacity: 0;
+        transform: translateY(-20px);
+      }
+    }
+  
+    footer {
+      text-align: center;
+      margin-top: 20px;
+      border-top: 2px solid white;
+      padding: 10px;
+    }
+  
+    .column {
+      flex: 1; /* Faire en sorte que chaque colonne occupe la même largeur */
+      text-align: center;
+    }
+  
+    li {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+  
+    .no-border {
+      border-bottom: none; /* Enlever la bordure entre les éléments */
+    }
+  
+    /* Style pour les gains en or */
+    .gain {
+      color: gold; /* Gains en couleur or */
+      font-weight: bold;
+    }
+  
+    /* Style pour les ventes en bleu clair */
+    .sales {
+      color: lightblue; /* Nombre de ventes en bleu clair */
+      font-weight: bold;
+    }
+  
+    .sales-word {
+      color: lightblue; /* Mot "vente(s)" en bleu clair */
+      font-weight: bold;
     }
   </style>
 </head>
@@ -93,7 +128,7 @@
       <button onclick="validateSale('Mehdi')">Mehdi</button>
       <button onclick="validateSale('Guillaume')">Guillaume</button>
       <button onclick="validateSale('Oussama')">Oussama</button>
-      <button onclick="validateSale('Timothee')">Timothée</button>
+      <button onclick="validateSale('Timothee')">Timothée</button> <!-- Nouveau membre ajouté -->
     </div>
 
     <h2>Classement des Vente(s) / Migration(s)</h2>
@@ -102,59 +137,49 @@
     </ul>
 
     <h2>Options</h2>
-    <button class="reset-btn" onclick="resetSales()">Réinitialiser les ventes / migration(s)</button>
+    <button onclick="resetSales()">Réinitialiser les ventes / migration(s)</button>
   </div>
 
   <footer>
     <p>&copy; 2025 - Les Ventes de QQ</p>
   </footer>
 
-  <!-- Supabase -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <script>
-    const SUPABASE_URL = "https://puibgqzzofpvrmjadddu.supabase.co";
-    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InB1aWJncXp6b2ZwdnJtamFkZGR1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3Mzk2NDI5NDQsImV4cCI6MjA1NTIxODk0NH0.RX31oBb01V0u2a2J95vXXj2gEBA9fmO38-Sk0WeTK8I";
-    const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+    // Charger les données des ventes depuis localStorage (si elles existent)
+    let salesData = JSON.parse(localStorage.getItem('salesData')) || {
+        "Julien": 0,
+        "Thomas": 0,
+        "Laetitia": 0,
+        "Charles": 0,
+        "Mehdi": 0,
+        "Guillaume": 0,
+        "Oussama": 0,
+        "Timothée": 0
+    };
 
-    // Ajouter une vente
-    async function validateSale(member) {
-        let { data, error } = await supabase
-            .from("sales")
-            .select("*")
-            .eq("member", member)
-            .single();
+    // Fonction pour valider une vente et mettre à jour le classement
+    function validateSale(member) {
+        // Augmenter le compteur de ventes localement
+        salesData[member]++;
+        
+        // Sauvegarder les données dans localStorage
+        localStorage.setItem('salesData', JSON.stringify(salesData));
 
-        let newSales = data ? data.sales + 1 : 1;
+        // Afficher l'animation et jouer le son
+        showSaleAnimation(member);
+        playSound();
 
-        const { error: upsertError } = await supabase
-            .from("sales")
-            .upsert([{ member, sales: newSales }], { onConflict: ['member'] });
-
-        if (upsertError) {
-            console.error("Erreur :", upsertError);
-        } else {
-            showPopup("✅ Vente ajoutée !");
-            updateRanking();
-        }
+        // Trier et afficher le classement
+        let sortedSales = Object.entries(salesData).sort((a, b) => b[1] - a[1]);
+        updateRanking(sortedSales);
     }
 
-    // Mettre à jour le classement
-    async function updateRanking() {
-        const { data: sales, error } = await supabase
-            .from("sales")
-            .select("*")
-            .order("sales", { ascending: false });
-
-        if (error) {
-            console.error("Erreur de chargement :", error);
-            return;
-        }
-
+    // Fonction pour mettre à jour le classement
+    function updateRanking(sortedSales) {
         const rankingList = document.getElementById("ranking-list");
         rankingList.innerHTML = "";
-        
-        sales.forEach(({ member, sales }) => {
-            const gain = calculateGain(sales);
+        sortedSales.forEach(([member, sales]) => {
+            const gain = calculateGain(sales);  // Calculer le gain en fonction des ventes
             const listItem = document.createElement("li");
             listItem.innerHTML = `<div class="column">${member}</div>
                                   <div class="column"><span class="sales">${sales}</span> <span class="sales-word">vente(s)</span></div>
@@ -163,48 +188,61 @@
         });
     }
 
-    // Réinitialiser les ventes
-    async function resetSales() {
-        if (confirm("Voulez-vous réinitialiser toutes les ventes ?")) {
-            const { error } = await supabase
-                .from("sales")
-                .delete()
-                .gt("sales", 0);
-
-            if (error) {
-                console.error("Erreur de réinitialisation :", error);
-            } else {
-                updateRanking();
-            }
-        }
-    }
-
-    // Calcul du gain
+    // Fonction pour calculer le gain en fonction du nombre de ventes
     function calculateGain(sales) {
         if (sales >= 20) {
-            return sales * 5;
+            return sales * 5;  // 5€ par vente à partir de 20 ventes
         } else if (sales >= 10) {
-            return sales * 4;
+            return sales * 4;  // 4€ par vente entre 10 et 19 ventes
         } else {
-            return sales * 3;
+            return sales * 3;  // 3€ par vente entre 1 et 9 ventes
         }
     }
 
-    // Affichage du popup
-    function showPopup(message) {
-        const popup = document.createElement("div");
-        popup.classList.add("popup");
-        popup.textContent = message;
+    // Fonction pour réinitialiser les ventes
+    function resetSales() {
+        // Afficher une fenêtre de confirmation avant de réinitialiser
+        if (confirm('Êtes-vous sûr de vouloir réinitialiser toutes les ventes ? Cela réinitialisera toutes les données.')) {
+            // Réinitialiser les données
+            for (let member in salesData) {
+                salesData[member] = 0;
+            }
 
-        document.body.appendChild(popup);
+            // Sauvegarder les données réinitialisées dans localStorage
+            localStorage.setItem('salesData', JSON.stringify(salesData));
 
-        setTimeout(() => {
-            popup.remove();
-        }, 1500);
+            // Mettre à jour l'affichage du classement
+            updateRanking(Object.entries(salesData).sort((a, b) => b[1] - a[1]));
+        }
     }
 
-    // Charger le classement au démarrage
-    window.onload = updateRanking;
+    // Fonction pour afficher l'animation "+1"
+    function showSaleAnimation(member) {
+        const saleAnimation = document.createElement("div");
+        saleAnimation.classList.add("sale-animation");
+        saleAnimation.textContent = "+1";
+        saleAnimation.style.color = "red";  // Mettre en rouge
+        saleAnimation.style.fontSize = "50px";  // Augmenter la taille
+
+        const button = document.querySelector(`button[onclick="validateSale('${member}')"]`);
+        button.appendChild(saleAnimation);
+
+        setTimeout(() => {
+            saleAnimation.remove();
+        }, 1000);
+    }
+
+    // Fonction pour jouer le son
+    function playSound() {
+        const audio = new Audio('son_buzzer.mp3');  // Assurez-vous que le fichier son est dans le même répertoire
+        audio.play();
+    }
+
+    // Initialiser le classement dès le chargement de la page
+    window.onload = function() {
+        let sortedSales = Object.entries(salesData).sort((a, b) => b[1] - a[1]);
+        updateRanking(sortedSales);
+    };
   </script>
 </body>
 </html>
